Correct arm64 gic_v3 sizeof argument

No functional change as 'struct resource *' and 'struct resource **'
have the same size, but the former is the proper type.

PR:		204768
Submitted by:	David Binderman

Former-commit-id: d63365b1a724a104b0519f59eb72051f95a58f86